--- a/task_manager/tasks/templates/tasks/index.html
+++ b/task_manager/tasks/templates/tasks/index.html
@@ -13,30 +13,44 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
-    <div class="container">
-        <div class="row">
-            <div class="col text-center">
-                <h1>Task Manager</h1>
-            </div>
+    <div class="container_card shadow">
+        <h1 class="display-4 text-center">Task Manager</h1>
+        <div class="d-flex gap-5 justify-content-center">
+            <button class="filter_buttons">All</button>
+            <button class="filter_buttons">Active</button>
+            <button class="filter_buttons">Done</button>
         </div>
-        <div class="row">
-            {% for task in tasks %}
-            <div class="col-md-12">
-                <div class="tasks_card border border-dark">
-                    <h3>{{task.name}}</h3>
-                    {% if task.is_completed %}<i class="bi bi-check-lg"></i>{% else %}<i class="bi bi-clock"></i>{% endif %}
-                    <a href="{% url 'tasks:complete_task' task.id %}">Check as completed?</a>
-                    <a href="{% url 'tasks:delete_task' task.id %}">Delete</a>
-                </div>
-            </div>
-            {% endfor %}
-        </div>
-        <div class="">
-            <form class="form-control" action="{% url 'tasks:index_view' %}" method="post">
-                {% csrf_token %}
-                <input class="form-control" name="name" type="text" placeholder="Enter the Task" required minlength="3">
-                <input type="submit" class="form-control" value="Add task">
+        <hr class="mt-4">
+
+        <div class="container mt-4">
+            <form action="{% url 'tasks:index_view' %}" method="post" class="d-flex gap-2">
+                {% csrf_token %}        
+                <input type="text" name="name" placeholder="What needs to be done?" class="search_bar form-control">
+                <button class="add_button"><i class="bi bi-plus-circle add_sign"></i></button>
             </form>
+        </div>
+        <div class="container mt-4">
+            {% if tasks %}
+                {% for task in tasks %}
+                    <div class="tasks_card d-flex justify-content-between align-items-center gap-2 mb-2">
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+                            <h5 class="mb-0 text-muted"><del>{{task.name}}</del></h5>
+                        </div>
+                        <a href="{% url 'tasks:delete_task' task.id %}"><i class="bi bi-trash trash_sign"></i></a>
+                    </div>
+                {% endfor %}
+            {% else %}
+                <div class="tasks_card d-flex align-items-center gap-2">
+                    <i class="bi bi-exclamation-circle exclamation_sign"></i>
+                    <h5 class="mb-0">No tasks yet. Add some tasks to get started!</h5>
+                </div>
+            {% endif %}
+        </div>
+        <hr>
+        <div class="container d-flex justify-content-between">
+            <p>3 total tasks</p>
+            <p>0 completed</p>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
